--- a/charts/discovery-platform/templates/deployment.yaml
+++ b/charts/discovery-platform/templates/deployment.yaml
@@ -38,7 +38,7 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           ports:
-            - name: http
+            - name: {{ .Values.service.name }}
               containerPort: {{ .Values.service.port }}
               protocol: TCP
           resources:
