--- a/charts/discovery-platform/templates/service.yaml
+++ b/charts/discovery-platform/templates/service.yaml
@@ -8,8 +8,8 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      name: {{ .Values.service.name }}
+      targetPort: {{ .Values.service.name }}
       protocol: TCP
-      name: http
   selector:
     {{- include "discovery-platform.selectorLabels" . | nindent 4 }}
