--- a/charts/exit-node/templates/service.yaml
+++ b/charts/exit-node/templates/service.yaml
@@ -5,11 +5,10 @@ metadata:
   labels:
     {{- include "exit-node.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
+  {{- with .Values.service.ports }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+    {{- toYaml . | nindent 8 }}
+  {{- end }}
   selector:
     {{- include "exit-node.selectorLabels" . | nindent 4 }}
