--- a/.github/workflows/day-1-apply.yaml
+++ b/.github/workflows/day-1-apply.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       #TODO - move the creation of the image to a repo
-      image: sitilge/gcp-terraform:latest
+      image: sitilge/gcp-terraform:1
     steps:
       - name: Checkout the code
         id: checkout-code
@@ -21,6 +21,9 @@ jobs:
           export GOOGLE_APPLICATION_CREDENTIALS=/tmp/credentials.json
           export TF_VAR_google_project="${{ secrets.GOOGLE_PROJECT }}"
           export TF_VAR_google_region="${{ secrets.GOOGLE_REGION }}"
+          export TF_VAR_argocd_credentials_key="${{ secrets.ARGOCD_CREDENTIALS_KEY }}"
+          gcloud auth activate-service-account --key-file /tmp/credentials.json
+          gcloud container clusters get-credentials ${TF_VAR_name} --region ${TF_VAR_google_region} --project ${TF_VAR_google_project}
           cd day-1
           terraform init -backend-config="bucket=${{ secrets.GOOGLE_BUCKET }}"
           terraform plan -out=tfplan-apply
@@ -35,7 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       #TODO - move the creation of the image to a repo
-      image: sitilge/gcp-terraform:latest
+      image: sitilge/gcp-terraform:1
     needs: day-1-apply-plan
     steps:
       - name: Checkout the code
@@ -54,6 +57,9 @@ jobs:
           export GOOGLE_APPLICATION_CREDENTIALS=/tmp/credentials.json
           export TF_VAR_google_project="${{ secrets.GOOGLE_PROJECT }}"
           export TF_VAR_google_region="${{ secrets.GOOGLE_REGION }}"
+          export TF_VAR_argocd_credentials_key="${{ secrets.ARGOCD_CREDENTIALS_KEY }}"
+          gcloud auth activate-service-account --key-file /tmp/credentials.json
+          gcloud container clusters get-credentials ${TF_VAR_name} --region ${TF_VAR_google_region} --project ${TF_VAR_google_project}
           cd day-1
           terraform init -backend-config="bucket=${{ secrets.GOOGLE_BUCKET }}"
           terraform apply ${{ steps.download-artifact.outputs.download-path }}/tfplan-apply
