--- a/.github/workflows/day-0-destroy.yaml
+++ b/.github/workflows/day-0-destroy.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       #TODO - move the creation of the image to a repo
-      image: sitilge/gcp-terraform:1
+      image: sitilge/gcp-terraform:9ad90af0
     steps:
       - name: Checkout the code
         id: checkout-code
@@ -35,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       #TODO - move the creation of the image to a repo
-      image: sitilge/gcp-terraform:1
+      image: sitilge/gcp-terraform:9ad90af0
     needs: day-0-destroy-plan
     steps:
       - name: Checkout the code
