--- a/.github/workflows/day-1-destroy.yaml
+++ b/.github/workflows/day-1-destroy.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       #TODO - move the creation of the image to a repo
-      image: sitilge/gcp-terraform:1
+      image: sitilge/gcp-terraform:9ad90af0
     steps:
       - name: Checkout the code
         id: checkout-code
@@ -36,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       #TODO - move the creation of the image to a repo
-      image: sitilge/gcp-terraform:1
+      image: sitilge/gcp-terraform:9ad90af0
     needs: day-1-destroy-plan
     steps:
       - name: Checkout the code
