--- a/charts/discovery-platform/templates/deployment.yaml
+++ b/charts/discovery-platform/templates/deployment.yaml
@@ -37,6 +37,19 @@ spec:
           env:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          {{- if .Values.envFrom }}
+          envFrom:
+          {{- range $value := .Values.envFrom }}
+            {{- if (eq .type "configmap") }}
+            - configMapRef:
+                name: {{ .name }}
+            {{- end }}
+            {{- if (eq .type "secret") }}
+            - secretRef:
+                name: {{ .name }}
+            {{- end }}
+          {{- end }}
+          {{- end }}
           ports:
             - name: {{ .Values.service.name }}
               containerPort: {{ .Values.service.port }}
