--- a/.github/workflows/day-0-destroy.yaml
+++ b/.github/workflows/day-0-destroy.yaml
@@ -23,7 +23,7 @@ jobs:
           export TF_VAR_google_region="${{ secrets.GOOGLE_REGION }}"
           cd day-0
           terraform init -backend-config="bucket=${{ secrets.GOOGLE_BUCKET }}"
-          terraform plan -out=tfplan-destroy
+          terraform plan -destroy -out=tfplan-destroy
       - name: Upload Terraform plan file
         id: upload-artifact
         uses: actions/upload-artifact@v3
@@ -56,4 +56,4 @@ jobs:
           export TF_VAR_google_region="${{ secrets.GOOGLE_REGION }}"
           cd day-0
           terraform init -backend-config="bucket=${{ secrets.GOOGLE_BUCKET }}"
-          terraform destroy ${{ steps.download-artifact.outputs.download-path }}/tfplan-destroy
+          terraform apply ${{ steps.download-artifact.outputs.download-path }}/tfplan-destroy
