--- a/day-3/discovery-platform/application.yaml
+++ b/day-3/discovery-platform/application.yaml
@@ -15,22 +15,14 @@ spec:
         - name: HELM_VALUES
           value: |
             image:
-              tag: "a6d518b"
+              repository: sitilge/discovery-platform
+              tag: a6d518b
+            envFrom:
+                type: secret
+                name: discovery-platform
             env:
-              - name: "BRANCH"
-                value: "MAIN"
-              - name: "DB_CONNECTION_URL"
-                value: ""
-              - name: "SMART_CONTRACT_ADDRESS"
-                value: ""
-              - name: "HOPRD_ACCESS_TOKEN"
-                value: ""
               - name: "FUNDING_SERVICE_URL"
                 value: "http://funding-service.production:3010"
-              - name: "SECRET_KEY"
-                value: ""
-              - name: "WALLET_PRIV_KEY"
-                value: ""
               - name: "PORT"
                 value: "3020"
               - name: "NODE_ENV"
