--- a/day-2/apps/application-production.yaml
+++ b/day-2/apps/application-production.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: production
+  name: apps-production
   namespace: argocd
 spec:
   project: default
