--- a/day-3/funding-service/application.yaml
+++ b/day-3/funding-service/application.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: funding-service-production
+  name: funding-service
   namespace: argocd
 spec:
   project: default
   source:
     #TODO - do not hardcode
     repoURL: https://github.com/Rpc-h/infrastructure
-    targetRevision: main
+    targetRevision: staging
     path: charts/funding-service
     plugin:
       env:
@@ -25,7 +25,7 @@ spec:
                 value: "3020"
   destination:
     server: https://kubernetes.default.svc
-    namespace: production
+    namespace: staging
   syncPolicy:
     automated:
       prune: true
