--- a/day-3/discovery-platform/application.yaml
+++ b/day-3/discovery-platform/application.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     #TODO - do not hardcode
     repoURL: https://github.com/Rpc-h/infrastructure
-    targetRevision: main
+    targetRevision: testing
     path: charts/discovery-platform
     plugin:
       env:
@@ -22,14 +22,14 @@ spec:
                   name: discovery-platform
             env:
               - name: "FUNDING_SERVICE_URL"
-                value: "http://funding-service.production:3010"
+                value: "http://funding-service.testing:3010"
               - name: "PORT"
                 value: "3020"
               - name: "NODE_ENV"
                 value: "development"
   destination:
     server: https://kubernetes.default.svc
-    namespace: production
+    namespace: testing
   syncPolicy:
     automated:
       prune: true
