--- a/day-3/discovery-platform/application.yaml
+++ b/day-3/discovery-platform/application.yaml
@@ -4,7 +4,7 @@ metadata:
   name: discovery-platform-testing
   namespace: argocd
 spec:
-  project: default
+  project: testing
   source:
     #TODO - do not hardcode
     repoURL: https://github.com/Rpc-h/infrastructure
