--- a/day-3/funding-service/application.yaml
+++ b/day-3/funding-service/application.yaml
@@ -4,7 +4,7 @@ metadata:
   name: funding-service-testing
   namespace: argocd
 spec:
-  project: testing
+  project: default
   source:
     #TODO - do not hardcode
     repoURL: https://github.com/Rpc-h/infrastructure
