--- a/day-3/funding-service/application.yaml
+++ b/day-3/funding-service/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: funding-service
+  name: funding-service-staging
   namespace: argocd
 spec:
   project: default
