--- a/day-3/discovery-platform/application.yaml
+++ b/day-3/discovery-platform/application.yaml
@@ -18,8 +18,8 @@ spec:
               repository: sitilge/discovery-platform
               tag: a6d518b
             envFrom:
-                - type: secret
-                  name: discovery-platform
+              - type: secret
+                name: discovery-platform-production
             env:
               - name: "FUNDING_SERVICE_URL"
                 value: "http://funding-service.production:3010"
