--- a/day-3/funding-service/application.yaml
+++ b/day-3/funding-service/application.yaml
@@ -16,17 +16,10 @@ spec:
           value: |
             image:
               tag: "a6d518b"
+            envFrom:
+              - type: secret
+                name: discovery-platform-production
             env:
-              - name: "BRANCH"
-                value: "MAIN"
-              - name: "SECRET_KEY"
-                value: ""
-              - name: "WALLET_PRIV_KEY"
-                value: ""
-              - name: "DB_CONNECTION_URL"
-                value: ""
-              - name: "SMART_CONTRACT_ADDRESS"
-                value: ""
               - name: "PORT"
                 value: "3020"
   destination:
