--- a/charts/discovery-platform/values.yaml
+++ b/charts/discovery-platform/values.yaml
@@ -36,19 +36,20 @@ service:
   name: "main"
 
 ingress:
-  enabled: true
+  enabled: false
   className: ""
-  annotations:
-    cert-manager.io/issuer: rpch
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: discovery.rpch.net
+    - host: chart-example.local
       paths:
         - path: /
           pathType: ImplementationSpecific
-  tls:
-    - secretName: discovery.rpch.net-tls
-      hosts:
-        - discovery.rpch.net
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
 
 resources: {}
 
