--- a/charts/exit-node/values.yaml
+++ b/charts/exit-node/values.yaml
@@ -16,6 +16,7 @@ hopr:
     tag: ""
 
   env: {}
+  envFrom: {}
 
   resources: {}
 
@@ -34,6 +35,7 @@ rpch:
     tag: ""
 
   env: {}
+  envFrom: {}
 
   resources: {}
 
@@ -65,3 +67,20 @@ autoscaling:
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
+
+ingress:
+  enabled: false
+  port: "9091"
+  className: ""
+  annotations: {}
+  # kubernetes.io/ingress.class: nginx
+  # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: chart-example.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
