Update exit node 1 app

--- a/day-3/exit-node-1/application.yaml
+++ b/day-3/exit-node-1/application.yaml
@@ -34,7 +34,7 @@ spec:
             ingress:
               enabled: true
               className: ""
-              port: "9091"
+              port: 9091
               annotations:
                 cert-manager.io/issuer: rpch
               hosts:
