--- a/day-3/exit-node-1/application.yaml
+++ b/day-3/exit-node-1/application.yaml
@@ -36,7 +36,7 @@ spec:
               className: ""
               port: 9091
               annotations:
-                cert-manager.io/issuer: rpch-tech
+                cert-manager.io/cluster-issuer: rpch-tech
               hosts:
                 - host: exit-node-1.rpch.tech
                   paths:
