--- a/day-3/discovery-platform/application.yaml
+++ b/day-3/discovery-platform/application.yaml
@@ -19,24 +19,24 @@ spec:
               tag: a6d518b
             envFrom:
               - type: secret
-                name: discovery-platform-production
+                name: discovery-platform-staging
             env:
               - name: "FUNDING_SERVICE_URL"
-                value: "http://funding-service.production:3010"
+                value: "http://funding-service.staging:3010"
             ingress:
               enabled: true
               className: ""
               annotations:
                 cert-manager.io/cluster-issuer: rpch-tech
               hosts:
-                - host: discovery.rpch.tech
+                - host: staging.discovery.rpch.tech
                   paths:
                     - path: /
                       pathType: ImplementationSpecific
               tls:
-                - secretName: discovery.rpch.tech-tls
+                - secretName: staging.discovery.rpch.tech-tls
                   hosts:
-                    - discovery.rpch.tech
+                    - staging.discovery.rpch.tech
   destination:
     server: https://kubernetes.default.svc
     namespace: staging
