--- a/day-3/manager/application.yaml
+++ b/day-3/manager/application.yaml
@@ -19,7 +19,7 @@ spec:
               tag: 29d16fd
             envFrom:
               - type: secret
-                name: discovery-platform-production
+                name: manager-staging
             env:
               - name: "PORT"
                 value: "3030"
