Update day-3 apps, add sealed secrets

--- a/day-3/discovery-platform/application.yaml
+++ b/day-3/discovery-platform/application.yaml
@@ -21,6 +21,8 @@ spec:
               - type: secret
                 name: discovery-platform-staging
             env:
+              - name: "SKIP_CHECK_COMMITMENT"
+                value: "true"
               - name: "FUNDING_SERVICE_URL"
                 value: "http://funding-service.staging:3010"
             ingress:
