Add a new env variable for debug

--- a/day-3/discovery-platform/application.yaml
+++ b/day-3/discovery-platform/application.yaml
@@ -25,6 +25,8 @@ spec:
                 value: "true"
               - name: "FUNDING_SERVICE_URL"
                 value: "http://funding-service.staging:3010"
+              - name: "DEBUG"
+                value: "rpch\*\,\-\*metrics"
             ingress:
               enabled: true
               className: ""
