--- a/day-3/discovery-platform/application.yaml
+++ b/day-3/discovery-platform/application.yaml
@@ -16,6 +16,9 @@ spec:
 #        - name: HELM_VALUES
 #          value: |
 
+#      - name: "DEBUG"
+#        value: "rpch\*\,\-\*metrics"
+
     helm:
       values: |      
         image:
@@ -29,8 +32,6 @@ spec:
             value: "true"
           - name: "FUNDING_SERVICE_URL"
             value: "http://funding-service.staging:3010"
-          - name: "DEBUG"
-            value: "rpch\*\,\-\*metrics"
         ingress:
           enabled: true
           className: ""
