--- a/charts/funding-service/templates/deployment.yaml
+++ b/charts/funding-service/templates/deployment.yaml
@@ -33,9 +33,12 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          {{- with .Values.env }}
+          {{- if .Values.env }}
           env:
-            {{- toYaml . | nindent 12 }}
+          {{- range $value, $key := .Values.env }}
+            - name: {{ $key.name }}
+              value: {{ $key.value | quote }}
+          {{- end }}
           {{- end }}
           ports:
             - name: {{ .Values.service.name }}
