--- a/day-3/discovery-platform/application.yaml
+++ b/day-3/discovery-platform/application.yaml
@@ -10,41 +10,37 @@ spec:
     repoURL: https://github.com/Rpc-h/infrastructure
     targetRevision: staging
     path: charts/discovery-platform
-
-#    plugin:
-#      env:
-#        - name: HELM_VALUES
-#          value: |
-    helm:
-      values: |      
-        image:
-          repository: sitilge/discovery-platform
-          tag: a6d518b
-        envFrom:
-          - type: secret
-            name: discovery-platform-staging
-        env:
-          - name: "SKIP_CHECK_COMMITMENT"
-            value: "true"
-          - name: "FUNDING_SERVICE_URL"
-            value: "http://funding-service.staging:3010"
-          - name: "DEBUG"
-            value: "rpch*,-*metrics"
-
-        ingress:
-          enabled: true
-          className: ""
-          annotations:
-            cert-manager.io/cluster-issuer: rpch-tech
-          hosts:
-            - host: staging.discovery.rpch.tech
-              paths:
-                - path: /
-                  pathType: ImplementationSpecific
-          tls:
-            - secretName: staging.discovery.rpch.tech-tls
+    plugin:
+      env:
+        - name: HELM_VALUES
+          value: |
+            image:
+              repository: sitilge/discovery-platform
+              tag: a6d518b
+            envFrom:
+              - type: secret
+                name: discovery-platform-staging
+            env:
+              - name: "SKIP_CHECK_COMMITMENT"
+                value: "true"
+              - name: "FUNDING_SERVICE_URL"
+                value: "http://funding-service.staging:3010"
+              - name: "DEBUG"
+                value: "rpch*,-*metrics"
+            ingress:
+              enabled: true
+              className: ""
+              annotations:
+                cert-manager.io/cluster-issuer: rpch-tech
               hosts:
-                - staging.discovery.rpch.tech
+                - host: staging.discovery.rpch.tech
+                  paths:
+                    - path: /
+                      pathType: ImplementationSpecific
+              tls:
+                - secretName: staging.discovery.rpch.tech-tls
+                  hosts:
+                    - staging.discovery.rpch.tech
   destination:
     server: https://kubernetes.default.svc
     namespace: staging
