--- a/day-3/manager/application.yaml
+++ b/day-3/manager/application.yaml
@@ -23,6 +23,8 @@ spec:
             env:
               - name: "PORT"
                 value: "3030"
+              - name: "DEBUG"
+                value: "rpch*,-*metrics"
   destination:
     server: https://kubernetes.default.svc
     namespace: staging
