Update exit node env variable

--- a/day-3/exit-node-1/application.yaml
+++ b/day-3/exit-node-1/application.yaml
@@ -44,6 +44,8 @@ spec:
                   value: "true"
                 - name: "HOPRD_INIT"
                   value: "true"
+                - name: "HOPRD_API_HOST"
+                  value: "0.0.0.0"
             ingress:
               enabled: true
               className: ""
