--- a/charts/exit-node/values.yaml
+++ b/charts/exit-node/values.yaml
@@ -28,6 +28,14 @@ hopr:
   # runAsNonRoot: true
   # runAsUser: 1000
 
+  persistence:
+    identity:
+      path: "/mnt/identity"
+      size: "10Gi"
+    data:
+      path: "/mnt/data"
+      size: "10Gi"
+
 rpch:
   image:
     repository: sitilge/exit-node
@@ -46,6 +54,14 @@ rpch:
     # readOnlyRootFilesystem: true
   # runAsNonRoot: true
   # runAsUser: 1000
+
+  persistence:
+    identity:
+      path: "/mnt/identity"
+      size: "10Gi"
+    data:
+      path: "/mnt/data"
+      size: "10Gi"
 
 imagePullSecrets: []
 nameOverride: ""
