Update persistence config in exit node

--- a/charts/exit-node/templates/pvc.yaml
+++ b/charts/exit-node/templates/pvc.yaml
@@ -5,6 +5,8 @@ metadata:
   labels:
     {{- include "exit-node.labels" . | nindent 4 }}
 spec:
+  accessModes:
+    - ReadWriteOnce
   resources:
     requests:
       storage: 10Gi
