--- a/charts/exit-node/templates/pvc-rpch-data.yaml
+++ b/charts/exit-node/templates/pvc-rpch-data.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ include "exit-node.fullname" . }}
+  name: {{ include "exit-node.fullname" . }}-rpch-data
   labels:
     {{- include "exit-node.labels" . | nindent 4 }}
 spec:
@@ -9,4 +9,4 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 10Gi
+      storage: {{ .Values.rpch.persistence.data.size }}
