Update rpch security context

--- a/day-3/exit-node-1/application.yaml
+++ b/day-3/exit-node-1/application.yaml
@@ -62,6 +62,10 @@ spec:
                   value: "/mnt/identity"
                 - name: "RPCH_DATA_DIR"
                   value: "/mnt/data"
+              securityContext:
+                runAsUser: 1000
+                runAsGroup: 1000
+                fsGroup: 1000
             
             ingress:
               enabled: true
