Update rpch security context

--- a/day-3/exit-node-1/application.yaml
+++ b/day-3/exit-node-1/application.yaml
@@ -63,9 +63,8 @@ spec:
                 - name: "RPCH_DATA_DIR"
                   value: "/mnt/data"
               securityContext:
-                runAsUser: 1000
-                runAsGroup: 1000
-                fsGroup: 1000
+                runAsUser: 0 #TODO - this is bad
+                runAsGroup: 0 #TODO - this is bad
             
             ingress:
               enabled: true
