Update discovery platform tag

--- a/day-3/discovery-platform/application.yaml
+++ b/day-3/discovery-platform/application.yaml
@@ -16,7 +16,7 @@ spec:
           value: |
             image:
               repository: sitilge/discovery-platform
-              tag: fad4bde
+              tag: "4970778"
             envFrom:
               - type: secret
                 name: discovery-platform-staging
