Update env variable for funding service

--- a/day-3/discovery-platform/application.yaml
+++ b/day-3/discovery-platform/application.yaml
@@ -24,7 +24,7 @@ spec:
               - name: "SKIP_CHECK_COMMITMENT"
                 value: "true"
               - name: "FUNDING_SERVICE_URL"
-                value: "http://funding-service.staging:3010"
+                value: "http://funding-service-staging.staging:3010"
               - name: "DEBUG"
                 value: "rpch*,-*metrics"
             ingress:
